Faster spawner item lookups & minor cleanups: - Cache per-spawner NamespacedKey to avoid repeated allocations - Scan PDC once per key instead of O(n) key-set loop - Remove duplicate concretespawner.yml in defaults - Use List.copyOf for getItemKeys()